Updated cover letter

--- a/RPerezTorro.tex
+++ b/RPerezTorro.tex
@@ -10,55 +10,63 @@
 
 \section{Experience \& Projects}
 \begin{eventlist}
-\workitem{November 2013 -- Present}
-     {University of Southampton}
+\eduitem{Nov 2013 -- Feb 2017 $|$ Univ. of Southampton}{}
      {Post-Graduate Researcher}
 
 Investigate the effect of wing shape modifications on
 the aerodynamic performance
 \begin{itemize}
-	\itemsep -1pt
-	\item CFD code (\textbf{+10,000 lines}) development
-	\item Big-Data manipulation (\textbf{+1Tb datasets})
-	\item High Performance Computing\\ (\textbf{+8,000 cores using MPI})
-	\item High Quality Technical Reports (\textbf{1 Journal paper and 3 International
-	conferences})
+	\itemsep -2pt
+	\item CFD solver \& post-processing tools development (\textbf{Python \& Fortran}) 
+	\item High Performance Computing
+	\item High Speed Aerodynamics
+	\item Compressible flow
+	\item High Quality Technical Reports \& Presentations
 \end{itemize}
 
-\workitem{November 2013 -- Present}
-	{University of Southampton}
+\eduitem{Nov 2013 -- Dec 2016 $|$ Univ. of Southampton}{}
 	{Assistant Lecturer}
 \begin{itemize}
-	\itemsep -1pt
-	\item Teaching Aerodynamics \& Computational Fluid Dynamics (\textbf{+30 Students})
-	\item Teaching Ansys Fluent \& Star CCM+
-	\item Problem Solving for multiple CFD applications
-	\item Introducing new users to the CFD methodology
+	\itemsep -2pt
+	\item Aerodynamics \& Computational Fluid Dynamics (\textbf{Ansys Fluent \& Star
+	CCM+})
+	\item Problem Solving/Consulting for multiple CFD applications
+	\item Wind Tunnel Testing
 \end{itemize}
 
-\workitem{September 2012 -- May 2013}
-     {University of Southampton}
+\eduitem{Nov 2012 $|$ Univ. of Southampton}{}
+     {Wind Tunnel Testing}
+     \begin{itemize}
+	\itemsep -2pt
+     	\item Ride-height map measurement
+     	\item Front/rear wing angle of attack adjustment
+     \end{itemize}
+
+\eduitem{Sep 2012 -- May 2013 $|$ Univ. of Southampton}{}
      {Race Car Design Team}
 
 CFD methodology leader for an open wheel Hill Climb Race car design project
      \begin{itemize}
-	\itemsep -1pt
+	\itemsep -2pt
      	\item Obtained \textbf{33\% efficiency} improvement
-     	\item CFD workflow automation \\(\textbf{enhanced productivity by +500\%})
+     	\item CFD workflow automation using Java \& Star-CCM+(\textbf{+500\% productivity})
+	\item Cleaning \& Meshing CAD geometry
      \end{itemize}
 
-\workitem{September 2011 -- July 2012}
-     {University of Madrid}
+\eduitem{Sep 2011 -- Jul 2012 $|$ UPM Madrid (Spain)}{}
      {Solar Car Prototype}
 
-Aero \& CAD leader for a solar powered race car for the \href{http://www.shell.com/global/environment-society/ecomarathon.html}{Shell Eco-Marathon}
+Aero \& CAD leader for a
+\href{http://www.shell.com/global/environment-society/ecomarathon.html}{Shell
+Eco-Marathon} team
 \begin{itemize}
-\itemsep -1pt
-	\item Created full CAD model within competition \\constraints
-	\item \textbf{\texttildelow 30\% Drag Reduction} by full aerodynamic \\analysis
+\itemsep -2pt
+	\item Prototype car modelling (\textbf{CatiaV5})
+	\item \textbf{\texttildelow 30\% Drag Reduction} (\textbf{Ansys Fluent})
 \end{itemize}
 \end{eventlist}
 
+\vspace{-20pt}
 \section{Communication Skills}
 \begin{factlist}
 \item{Native}{Spanish, Catalan}
@@ -87,42 +95,43 @@ Aero \& CAD leader for a solar powered race car for the \href{http://www.shell.c
 \vspace{-20pt}
 \section{Education}
 \begin{eventlist}
-\eduitem{2013 -- 2016}
-     	{University of Southampton (UK)}
-     	{PhD -- \normalsize{LES of Wavy Leading Edge Aerofoils}} 
-	\begin{itemize}
-	\itemsep -1pt
-		\item Technical Writing
-		\item Advanced Computational Methods
-		\item Aeroacoustics
-	\end{itemize}
+\eduitem{2013 -- 2017 $|$ University of Southampton (UK)}{}
+     	{\normalsize{PhD -- CFD \& Aerodynamics}} \\
 
-\eduitem{2012 -- 2013}
-     	{University of Southampton (UK)}
-     	{MSc -- Race Car Aerodynamics -- 1:1} 
-  	\begin{itemize}
-	\itemsep -1pt
-	   \item Design of an Open Wheel Race Car
-	   \item CFD Modelling
-	   \item Design Search \& Optimisation
-	   \item Wind Tunnel Testing
-	\end{itemize}
+\vspace{-8pt}
+\eduitem{2012 -- 2013 $|$ University of Southampton (UK)}{}
+     	{\normalsize{MSc -- Race Car Aerodynamics -- 1:1}} \\
 
-\eduitem{2007 -- 2012}
-	{UPM Madrid (SPAIN)}
-	{BEng -- Aeronautical Engineer -- 2:1}
-  	\begin{itemize}
-	\itemsep -1pt
-	   \item Aerodynamics
-	   \item Structural Analysis
-	   \item Aerospace Maintenance
-	\end{itemize}
+\vspace{-8pt}
+\eduitem{2007 -- 2012 $|$ UPM Madrid (SPAIN)}{}
+	{\normalsize{BEng -- Aeronautical Engineer -- 2:1 (71\%)}}
 \end{eventlist}
 
-\vspace{-20pt}
+\vspace{-25pt}
+\section{Publications \& Conferences} 
+  	\begin{itemize}
+	\itemsep -2pt
+\item \textbf{A large-eddy simulation on a deep-stalled aerofoil with a wavy leading edge}. J. Fluid Mech. 813. \href{https://doi.org/10.1017/jfm.2016.841}{doi: 10.1017/jfm.2016.841}.
+\item \textbf{Flow characteristics of infinite-span wings with wavy leading edges}. $69^{th}$ APS DFD Meeting, November 2016, Portland (USA). 
+\item \textbf{Flow characteristics of deep stalled aerofoils with a wavy
+leading edge}. UK Fluids Conference, September 2016, London (UK). 
+\item \textbf{Large-eddy simulations of a stalled NACA0021 with a wavy
+leading edge}. UKTC Annual Meeting, September 2016, Cambridge (UK).
+	\end{itemize}
+
+\vspace{-25pt}
+\section{Awards \& Certificates} 
+  	\begin{itemize}
+	\itemsep -2pt
+	\item The Timothy Nickels Prize for best oral presentation on 2016 UKTC Annual Meeting
+	\item Star-CCM+ 3 Days Course at London HQ
+	\item 300h Catia V5 Course
+	\end{itemize}
+
+\vspace{-22pt}
 \section{More about me} 
 \begin{itemize}
-	\itemsep -1pt
+	\itemsep -2pt
 	\item Full driving license
 	\item Working hours flexibility
 	\item Willing to travel
