Remove one paragraph

--- a/RPerezTorro_CoverLetter.tex
+++ b/RPerezTorro_CoverLetter.tex
@@ -37,8 +37,8 @@
 \addrfrom{
 %\vspace{-15pt}
 \today\\ % Date
-238 Oceana Boulevard \\ % Address
-Southampton UK, SO14 3JG
+11 Howgate Rd \\ % Address
+London UK, SW14 8NQ
 }
 
 \phonefrom{+44 (0) 744 954 9630} % Phone number
