Sent for consideration

--- a/RPerezTorro_CoverLetter.tex
+++ b/RPerezTorro_CoverLetter.tex
@@ -51,9 +51,10 @@ London UK, SW14 8NQ
 \greetto{Dear Sir or Madam,} % Greeting text
 
 
-\newcommand{\job}{CFD R\&D Engineer}
+\newcommand{\job}{CFD Engineer}
 \newcommand{\jobref}{\job}
-\newcommand{\jobweb}{McLaren careers' website}
+\newcommand{\company}{Sahara Force India }
+\newcommand{\jobweb}{\company careers' website}
 
 \newcommand{\opng}[1]{
 		\IfEqCase{#1}{
@@ -75,10 +76,10 @@ London UK, SW14 8NQ
 %\nameto{} % Addressee of the letter above the to address
 
 \addrto{
-McLaren Technology Centre\\
-Chertsey Road,
-Woking (Surrey),\\
-GU21 4YH (UK)\\
+Sahara Force India Formula One Team\\
+Dadford Rd,
+Silverstone (Northhamptonshire),\\
+NN12 8TJ (UK)\\
 \\
 Job reference: \textbf{\jobref}  
 }
@@ -93,11 +94,11 @@ Job reference: \textbf{\jobref}
 %----------------------------------------------------------------------------------------
 
 
-\opng{2} ``\job'' position that has recently been posted on \jobweb .\clng{2}
+\opng{1} ``\job'' position that has recently been posted on \jobweb .\clng{1}
 
-I am really glad to see that McLaren is advertising a role that not only fits my academic profile perfectly but it is also something that I have enjoyed doing in the past. During my MSc I was accountable for the whole CFD workflow in a project that aimed to improve the aerodynamic performance of a F1-type race car. This role combined my three big passions: Race Cars, Aerodynamics and Computers. As a computer enthusiast, I enjoy coding and developing so linking the CFD solver (STAR-CCM+) with CAD (SolidWorks) and an optimisation code (Matlab) using Java and VisualBasic scripts proved to be both challenging and rewarding at the same time.
+The role that \company is advertising not only fits my academic profile perfectly but it is also something that I have enjoyed doing in the past. During my MSc I was accountable for the whole CFD workflow in a project that aimed to improve the aerodynamic performance of a F1-type race car. This role combined my three big passions: Race Cars, Aerodynamics and Computers. As a computer enthusiast, I enjoy coding and developing so linking the CFD solver (STAR-CCM+) with CAD (SolidWorks) and an optimisation code (Matlab) using Java and VisualBasic scripts proved to be both challenging and rewarding at the same time.
 
-I am also experienced in writing high quality technical reports and presenting in front of wide audiences as shown in the Publications \& Conferences section of my CV. And finally, although unfortunately I have not been able to work with it in the recent years, I also have some experience using CAD packages which you can check by visiting my linkedin profile (\href{https://uk.linkedin.com/in/rperezt}{uk.linkedin.com/in/rperezt}).
+I am also experienced in analysing and post-processing complex 3D unsteady flows and writing high quality technical reports as shown in the Publications \& Conferences section of my CV. And finally, although unfortunately I have not been able to work with it in the recent years, I also have some experience using CAD packages which you can check by visiting my linkedin profile (\href{https://uk.linkedin.com/in/rperezt}{uk.linkedin.com/in/rperezt}).
 
 Thank you for your time and consideration and please feel free to contact me at any time,
 if you need any more details. I look forward to your reply.
