--- a/RPerezTorro_CoverLetter.tex
+++ b/RPerezTorro_CoverLetter.tex
@@ -51,9 +51,9 @@ London UK, SW14 8NQ
 \greetto{Dear Sir or Madam,} % Greeting text
 
 
-\newcommand{\job}{CFD Engineer}
-\newcommand{\jobref}{\job}
-\newcommand{\company}{Sahara Force India }
+\newcommand{\job}{Ing\'enieur conception a\'erodynamique des soufflantes R\&T H/F}
+\newcommand{\jobref}{D2016RR11-20339-50336}
+\newcommand{\company}{Safran }
 \newcommand{\jobweb}{\company careers' website}
 
 \newcommand{\opng}[1]{
@@ -68,18 +68,17 @@ London UK, SW14 8NQ
 		that I am the right fit for the position in question for the following
 		reasons:}
 		{2}{Given the prestige of the company I imagine you would have received
-		piles of applications. However, I believe my experience, knowledge and
-		ambition can stand out amongst the rest.}
+		many applications. However, I believe my experience, knowledge and
+		ambition can stand out among the rest.}
 		}
 		}
 
 %\nameto{} % Addressee of the letter above the to address
 
 \addrto{
-Sahara Force India Formula One Team\\
-Dadford Rd,
-Silverstone (Northhamptonshire),\\
-NN12 8TJ (UK)\\
+Safran\\
+2, Boulevard du G\'en\'eral Martial Valin,\\
+75724 Paris Cedex 15 (FRANCE)\\
 \\
 Job reference: \textbf{\jobref}  
 }
@@ -94,14 +93,14 @@ Job reference: \textbf{\jobref}
 %----------------------------------------------------------------------------------------
 
 
-\opng{1} ``\job'' position that has recently been posted on \jobweb .\clng{1}
+\opng{1} ``\job'' position that has recently been posted on \jobweb .\clng{2}
 
-The role that \company is advertising not only fits my academic profile perfectly but it is also something that I have enjoyed doing in the past. During my MSc I was accountable for the whole CFD workflow in a project that aimed to improve the aerodynamic performance of a F1-type race car. This role combined my three big passions: Race Cars, Aerodynamics and Computers. As a computer enthusiast, I enjoy coding and developing so linking the CFD solver (STAR-CCM+) with CAD (SolidWorks) and an optimisation code (Matlab) using Java and VisualBasic scripts proved to be both challenging and rewarding at the same time.
+The role that \company is advertising not only fits my academic profile perfectly but it is also something that I have enjoyed doing in the past. For the past three and a half years I have been analysing the aerodynamic characteristics of wing profiles. In particular, I have been investigating the effect of leading edge shape modifications on the unsteady behaviour of a stalled wing by means of high fidelity CFD methods. However, I am also familiar with running tests on wind tunnel facilities and taking force-balance measurements. Besides, although unfortunately I have not been able to work with it in the recent years, I also have some experience using CAD packages which you can check by visiting my linkedin profile (\href{https://uk.linkedin.com/in/rperezt}{uk.linkedin.com/in/rperezt}).
 
-I am also experienced in analysing and post-processing complex 3D unsteady flows and writing high quality technical reports as shown in the Publications \& Conferences section of my CV. And finally, although unfortunately I have not been able to work with it in the recent years, I also have some experience using CAD packages which you can check by visiting my linkedin profile (\href{https://uk.linkedin.com/in/rperezt}{uk.linkedin.com/in/rperezt}).
+I am also experienced in analysing and post-processing complex 3D unsteady flows and writing high quality technical reports as shown in the Publications \& Conferences section of my CV. As a final point, although my level of French is not as good as my English or Spanish, I see this as a very exciting opportunity to increase my language skills at the same time that I gain new technical insights in other engineering fields. 
 
 Thank you for your time and consideration and please feel free to contact me at any time,
-if you need any more details. I look forward to your reply.
+if you need further details. I look forward to your reply.
 
 Yours Faithfully, \newline % Closing text
 \includegraphics[scale=0.7]{sgtrBlue} \newline 
