--- a/RPerezTorro_CoverLetter.tex
+++ b/RPerezTorro_CoverLetter.tex
@@ -52,7 +52,7 @@ London UK, SW14 8NQ
 
 
 \newcommand{\job}{Ing\'enieur conception a\'erodynamique des soufflantes R\&T H/F}
-\newcommand{\jobref}{D2016RR11-20339-50336}
+\newcommand{\jobref}{D2016R12-20743-51255}
 \newcommand{\company}{Safran }
 \newcommand{\jobweb}{\company careers' website}
 
@@ -79,7 +79,6 @@ London UK, SW14 8NQ
 Safran\\
 2, Boulevard du G\'en\'eral Martial Valin,\\
 75724 Paris Cedex 15 (FRANCE)\\
-\\
 Job reference: \textbf{\jobref}  
 }
 
@@ -93,9 +92,9 @@ Job reference: \textbf{\jobref}
 %----------------------------------------------------------------------------------------
 
 
-\opng{1} ``\job'' position that has recently been posted on \jobweb .\clng{2}
+\opng{2} ``\job'' position that has recently been posted on \jobweb .\clng{1}
 
-The role that \company is advertising not only fits my academic profile perfectly but it is also something that I have enjoyed doing in the past. For the past three and a half years I have been analysing the aerodynamic characteristics of wing profiles. In particular, I have been investigating the effect of leading edge shape modifications on the unsteady behaviour of a stalled wing by means of high fidelity CFD methods. However, I am also familiar with running tests on wind tunnel facilities and taking force-balance measurements. Besides, although unfortunately I have not been able to work with it in the recent years, I also have some experience using CAD packages which you can check by visiting my linkedin profile (\href{https://uk.linkedin.com/in/rperezt}{uk.linkedin.com/in/rperezt}).
+The role that \company is advertising not only fits my academic profile perfectly but it is also something that I have enjoyed doing in the past. For the past three and a half years I have been analysing the aerodynamic characteristics of wing profiles. In particular, I have been investigating the effect of leading edge shape modifications on the unsteady behaviour of a stalled wing by means of high fidelity CFD methods. However, I am also familiar with running tests on wind tunnel facilities and taking force-balance measurements. Besides, I have also used optimisation techniques to improve the aerodynamic performance in several projects which you can check by visiting my linkedin profile (\href{https://uk.linkedin.com/in/rperezt}{uk.linkedin.com/in/rperezt}).
 
 I am also experienced in analysing and post-processing complex 3D unsteady flows and writing high quality technical reports as shown in the Publications \& Conferences section of my CV. As a final point, although my level of French is not as good as my English or Spanish, I see this as a very exciting opportunity to increase my language skills at the same time that I gain new technical insights in other engineering fields. 
 
@@ -103,7 +102,7 @@ Thank you for your time and consideration and please feel free to contact me at 
 if you need further details. I look forward to your reply.
 
 Yours Faithfully, \newline % Closing text
-\includegraphics[scale=0.7]{sgtrBlue} \newline 
+\includegraphics[scale=0.6]{sgtrBlue} \newline 
 Rafael P\'erez
 
 %----------------------------------------------------------------------------------------
