IT/DataScience cover letter

--- a/RPerezTorro_CoverLetter.tex
+++ b/RPerezTorro_CoverLetter.tex
@@ -41,7 +41,7 @@ Verge dels Lliris 8 \\ % Address
 03801 Alcoi, Alicante (SPAIN)
 }
 
-\phonefrom{+44 (0) 744 954 9630} % Phone number
+\phonefrom{+34  96 652 58 95} % Phone number
 \emailfrom{rpereztorro@gmail.com} % Email address
 
 %----------------------------------------------------------------------------------------
@@ -51,9 +51,9 @@ Verge dels Lliris 8 \\ % Address
 \greetto{Dear Sir or Madam,} % Greeting text
 
 
-\newcommand{\job}{Ing\'enieur conception a\'erodynamique des soufflantes R\&T H/F}
-\newcommand{\jobref}{D2016RR11-20339-50336}
-\newcommand{\company}{Safran }
+\newcommand{\job}{Data Scientist/Software Developer}
+\newcommand{\jobref}{}
+\newcommand{\company}{Tessella }
 \newcommand{\jobweb}{\company careers' website}
 
 \newcommand{\opng}[1]{
@@ -75,13 +75,13 @@ Verge dels Lliris 8 \\ % Address
 
 %\nameto{} % Addressee of the letter above the to address
 
-\addrto{
-Safran\\
-2, Boulevard du G\'en\'eral Martial Valin,\\
-75724 Paris Cedex 15 (FRANCE)\\
-\\
-Job reference: \textbf{\jobref}  
-}
+%\addrto{
+%Safran\\
+%2, Boulevard du G\'en\'eral Martial Valin,\\
+%75724 Paris Cedex 15 (FRANCE)\\
+%\\
+%Job reference: \textbf{\jobref}  
+%}
 
 %----------------------------------------------------------------------------------------
 
@@ -93,17 +93,13 @@ Job reference: \textbf{\jobref}
 %----------------------------------------------------------------------------------------
 
 
-\opng{2} ``\job'' position that has recently been posted on
-\jobweb.\clng{1}
+\opng{2} ``\job'' position that has recently been posted on \jobweb .\clng{2}
 
-\opng{1} ``\job'' position that has recently been posted on \jobweb .\clng{2}
+The role that \company is advertising not only fits my academic profile perfectly but it is also something that I have enjoyed doing in the past. For the past three and a half years I have been analysing the aerodynamic characteristics of wing profiles. With this purpose I have had to develop many scripts in python and Matlab in order to process the large amounts of data extracted from the numerical simulations in an efficient manner.
 
-The role that \company is advertising not only fits my academic profile perfectly but it is also something that I have enjoyed doing in the past. For the past three and a half years I have been analysing the aerodynamic characteristics of wing profiles. In particular, I have been investigating the effect of leading edge shape modifications on the unsteady behaviour of a stalled wing by means of high fidelity CFD methods. However, I am also familiar with running tests on wind tunnel facilities and taking force-balance measurements. Besides, although unfortunately I have not been able to work with it in the recent years, I also have some experience using CAD packages which you can check by visiting my linkedin profile (\href{https://uk.linkedin.com/in/rperezt}{uk.linkedin.com/in/rperezt}).
+A logical step in my career would be to join a company where I could apply of all the cutting-edge numerical tools that I have learnt during my research years to solve real world problems. And this is what, in my opinion, \company is both looking and expecting from the candidates. In addition to this, having gone through the tough years of post-graduate research, I have become a ``professional learner''. That is, I am able to assimilate complicated and abstract ideas and very quickly put them into practice and present them to a non-specialist audience.
 
-I am also experienced in analysing and post-processing complex 3D unsteady flows and writing high quality technical reports as shown in the Publications \& Conferences section of my CV. As a final point, although my level of French is not as good as my English or Spanish, I see this as a very exciting opportunity to increase my language skills at the same time that I gain new technical insights in other engineering fields. 
-
-Thank you for your time and consideration and please feel free to contact me at any time,
-if you need further details. I look forward to your reply.
+Thank you for your time and consideration and please feel free to contact me at any time or visit my linkedin profile (\href{https://uk.linkedin.com/in/rperezt}{uk.linkedin.com/in/rperezt}) if you need further details. I look forward to your reply.
 
 Yours Faithfully, \newline % Closing text
 \includegraphics[scale=0.7]{sgtrBlue} \newline 
