Add minor modifications

--- a/RPerezTorro_CoverLetter.tex
+++ b/RPerezTorro_CoverLetter.tex
@@ -97,13 +97,13 @@ Verge dels Lliris 8 \\ % Address
 
 The role that \company is advertising not only fits my academic profile perfectly but it is also something that I have enjoyed doing in the past. For the past three and a half years I have been analysing the aerodynamic characteristics of wing profiles. With this purpose I have had to develop many scripts in python and Matlab in order to process the large amounts of data extracted from the numerical simulations in an efficient manner.
 
-A logical step in my career would be to join a company where I could apply of all the cutting-edge numerical tools that I have learnt during my research years to solve real world problems. And this is what, in my opinion, \company is both looking and expecting from the candidates. In addition to this, having gone through the tough years of post-graduate research, I have become a ``professional learner''. That is, I am able to assimilate complicated and abstract ideas and very quickly put them into practice and present them to a non-specialist audience.
+A logical step in my career would be to join a company where I could apply of all the cutting-edge numerical tools that I have learnt during my research years to solve real world problems. And this is what, in my opinion, \company is both looking for and expecting from the candidates. In addition to this, having gone through the tough years of post-graduate research, I have become a ``professional learner''. That is, I am able to assimilate complicated and abstract ideas and very quickly put them into practice and present them to a non-specialist audience.
 
 Thank you for your time and consideration and please feel free to contact me at any time or visit my linkedin profile (\href{https://uk.linkedin.com/in/rperezt}{uk.linkedin.com/in/rperezt}) if you need further details. I look forward to your reply.
 
 Yours Faithfully, \newline % Closing text
 \includegraphics[scale=0.7]{sgtrBlue} \newline 
-Rafael P\'erez
+Rafael P\'erez-Torr\'o
 
 %----------------------------------------------------------------------------------------
 
