--- a/RPerezTorro.tex
+++ b/RPerezTorro.tex
@@ -124,7 +124,7 @@ leading edge}. UKTC Annual Meeting, September 2016, Cambridge (UK).
 	\itemsep -2pt
 	\item The Timothy Nickels Prize for best oral presentation on 2016 UKTC Annual Meeting
 	\item Star-CCM+ 3 Days Course at London HQ
-	\item 300h Catia V5 Course
+	\item Catia V5 Course
 	\end{itemize}
 
 \vspace{-22pt}
