More general cv

--- a/RPerezTorro.tex
+++ b/RPerezTorro.tex
@@ -5,21 +5,19 @@
 
 \begin{document}
 
-\part{CFD/Aeronautical Engineer}{Rafael P\'erez}
+\part{Aerospace Engineer}{Rafael P\'erez}
 
 \section{Experience \& Projects}
 \begin{eventlist}
 \eduitem{Nov 2013 -- Feb 2017 $|$ Univ. of Southampton}{}
      {Post-Graduate Researcher}
 
-Investigate the effect of wing shape modifications on
-the aerodynamic performance
+Numerical investigation of novel wing geometry
 \begin{itemize}
 	\itemsep -2pt
-	\item CFD solver \& post-processing tools development (\textbf{Python \& Fortran}) 
-	\item High Performance Computing
-	\item High Speed Aerodynamics
-	\item Compressible flow
+	\item Development of post-processing tools (\textbf{Python \& Fortran}) 
+	\item High Order statistics and Dimensionality reduction
+	\item High Performance Computing (\textbf{MPI})
 	\item High Quality Technical Reports \& Presentations
 \end{itemize}
 
@@ -33,23 +31,14 @@ the aerodynamic performance
 	\item Wind Tunnel Testing
 \end{itemize}
 
-\eduitem{Nov 2012 $|$ Univ. of Southampton}{}
-     {Wind Tunnel Testing}
-     \begin{itemize}
-	\itemsep -2pt
-     	\item Ride-height map measurement
-     	\item Front/rear wing angle of attack adjustment
-     \end{itemize}
-
 \eduitem{Sep 2012 -- May 2013 $|$ Univ. of Southampton}{}
      {Race Car Design Team}
 
 CFD methodology leader for an open wheel Hill Climb Race car design project
      \begin{itemize}
 	\itemsep -2pt
-     	\item Obtained \textbf{33\% efficiency} improvement
-     	\item CFD workflow automation using Java \& Star-CCM+(\textbf{+500\% productivity})
-	\item Cleaning \& Meshing CAD geometry
+     	\item Obtained \textbf{33\% efficiency} improvement through constrained optimisation based on response surfaces (\textbf{Kriging})
+     	\item CFD workflow automation using Java \& Matlab scripts (\textbf{+500\% productivity})
      \end{itemize}
 
 \eduitem{Sep 2011 -- Jul 2012 $|$ UPM Madrid (Spain)}{}
@@ -60,8 +49,11 @@ Aero \& CAD leader for a
 Eco-Marathon} team
 \begin{itemize}
 \itemsep -2pt
-	\item Prototype car modelling (\textbf{CatiaV5})
-	\item \textbf{\texttildelow 30\% Drag Reduction} (\textbf{Ansys Fluent})
+	\item Creation of a complete car prototype model \\
+              (\textbf{CatiaV5})
+	\item \textbf{\texttildelow 30\% Drag Reduction} through parametric \\
+              geometry optimisation (\textbf{Ansys Fluent\\
+						   \& Matlab})
 \end{itemize}
 \end{eventlist}
 
@@ -124,7 +116,7 @@ leading edge}. UKTC Annual Meeting, September 2016, Cambridge (UK).
 	\itemsep -2pt
 	\item The Timothy Nickels Prize for best oral presentation on 2016 UKTC Annual Meeting
 	\item Star-CCM+ 3 Days Course at London HQ
-	\item Catia V5 Course
+	\item 110h Catia V5 Course
 	\end{itemize}
 
 \vspace{-22pt}
