--- a/RPerezTorroCV.tex
+++ b/RPerezTorroCV.tex
@@ -41,8 +41,8 @@
 % \href well..
 % \\ breaks the line into a new paragraph
 \noindent\href{mailto:rpereztorro@gmail.com}{rpereztorro@gmail.com}\sbull
-+49 15117518095\sbull
-+34 611411155\sbull
++49 1511 7518095\sbull
++34 611 411 155\sbull
 \href{https://www.linkedin.com/in/rperezt/}{www.linkedin.com/in/rperezt}
 \\
 23 Bachwiesen Stra\ss{e}\sbull
@@ -55,7 +55,7 @@ Germany
 \roottitle{SUMMARY}  % a root section title
 
 \vspace{-3pt}  % some vertical spacing
-\noindent \emph{Aeronautical engineer with excellent problem-solving skills, 4 years experience using high fidelity CFD, advanced knowledge of CAD software, coding in several programming languages and comfortable in public speach situations.}
+\noindent \emph{Aeronautical engineer with excellent problem-solving skills, 4 years experience using high fidelity CFD, advanced knowledge of CAD software, coding in several programming languages and comfortable in public speech situations.}
 \vspace{5pt}  % some vertical spacing
 \spacedhrule{0em}{-0.4em}
 
@@ -65,7 +65,7 @@ Germany
   {\href{https://www.p3-group.com/}{P3-SYSTEMS}}
   {\textsc{Stuttgart, Germany}} {%
   \headedsubsection{TEST ENGINEER}{Sept. 2017 -- Present}
-  {\bodytext{P3-Systems is a subsidiary of P3-Group which provides testing services for telematics and electronic systems for the automotive industry since 2006. Based in the Stuttgart's test-house, I was part of the Test-Automation team and provided automatic-test-simulations and defect analysis on a daily basis for multimedia boxes to be installed in Mercedes-Benz cars. \\
+  {\bodytext{P3-Systems is a subsidiary of P3-Group which provides testing services for telematics and electronic systems for the automotive industry since 2006. Based in the Stuttgart's test-house, I am part of the Test-Automation team and provide automatic-test-simulations and defect analysis on a daily basis for multimedia boxes to be installed in Mercedes-Benz cars. \\
   \textbf{Main Duties and highlights:} 
     \begin{itemize}
     	\item Prepare highly-intense testing simulations in order to find hardware and software malfunctions
@@ -79,7 +79,7 @@ Germany
 }
 
 \headedsection
-  {\href{https://www.southampton.ac.uk}{University of Southampton}}
+  {\href{https://www.southampton.ac.uk}{UNIVERSITY OF SOUTHAMPTON}}
   {\textsc{Southampton, United Kingdom}} {%
   \headedsubsection
     {POST-GRADUATE RESEARCHER}
@@ -122,7 +122,7 @@ Germany
   {\href{https://www.southampton.ac.uk}{University of Southampton}}
   {\textsc{Southampton, United Kingdom}} {%
   \headedsubsection
-    {PhD. in Computational Fluid Dynamics}
+    {PhD. in Computational Fluid Dynamics \& Aerodynamics}
     {Nov. 2013 -- Nov. 2017}{}}
 
 \headedsection
@@ -144,7 +144,7 @@ Germany
 \roottitle{PROJECTS}
 
 \headedsection  % sets the header for the section and includes any subsections
-  {\href{https://www.southampton.ac.uk}{University of Southampton}}
+  {\href{https://www.southampton.ac.uk}{UNIVERSITY OF SOUTHAMPTON}}
   {\textsc{Southampton, United Kingdom}} {%
   \headedsubsection{Race Car Design}{Sept. 2012 -- May 2013}
   {\bodytext{Design of an open-wheel race car using \texttt{Star-CCM+} and \texttt{SolidWorks}. The project includes an optimisation procedure which connects \texttt{Matlab}, \texttt{SolidWorks}, and \texttt{Star-CCM+} to perform a fully automated optimisation of the front-wing-element's relative position based on Surrogate Modelling that led to a 30\% improvement of the aerodynamic efficiency.\\
@@ -156,16 +156,18 @@ Germany
 	\item Parametric design using \texttt{SolidWorks} with geometric restrictions
 	\item Surrogate modelling using Kriging
 	\item Variable space exploration using Latin-Hypercube sampling
+	\item 1/2 scale full car wind tunnel testing
     \end{itemize}
     }}
 }
 \headedsection  % sets the header for the section and includes any subsections
-  {\href{https://www.euita.upm.es}{Universidad Polit\'ecnica de Madrid}}
+  {\href{https://www.euita.upm.es}{UNIVERSIDAD POLIT\'ECNICA DE MADRID}}
   {\textsc{Madrid, Spain}} {%
   \headedsubsection{Solar Car Prototype Design}{Sept. 2011 -- Jun. 2012}
   {\bodytext{Design of a solar car prototype using \texttt{ANSYS-Fluent} and \texttt{CatiaV5} that participated in the \href{http://www.shell.com/energy-and-innovation/shell-ecomarathon.html}{Shell Eco-Marathon}.\\
   \textbf{Main Duties and highlights:} 
     \begin{itemize}
+	\item Aerofoil selection for lowest drag
 	\item 3-D meshing
 	\item CFD set-up, post-process and analysis
 	\item Parametric design using \texttt{CatiaV5} with geometric restrictions
@@ -208,9 +210,8 @@ Germany
 \vspace{0.5em}
 \inlineheadsection  % special section that has an inline header with a 'hanging' paragraph
   {Other:}
-  {MS-Office, Agile}
+  {Matlab, Matlab-Simulink, MS-Office, Agile (SCRUM), Wind Tunnel Testing}
 \vspace{0.5em}
-
 
 \spacedhrule{1.6em}{-0.4em}
 
@@ -222,14 +223,14 @@ Germany
 leading edge}. UK Fluids Conference, September 2016, London (UK). 
 \item \textbf{Large-eddy simulations of a stalled NACA0021 with a wavy
 leading edge}. UKTC Annual Meeting, September 2016, Cambridge (UK).
+\item \textbf{Aerodynamics of aerofoils with a wavy
+leading edge}. UKTC Annual Meeting, September 2017, London (UK).
 \end{itemize}
 
-\spacedhrule{1.6em}{-0.4em}
+\spacedhrule{0.0em}{-0.4em}
 \roottitle{AWARDS}
 \begin{itemize}
 	\item The Timothy Nickels Prize for best oral presentation on 2016 UKTC Annual Meeting	
 \end{itemize}
 
 \end{document}
-
-＀
