--- a/RPerezTorro_CoverLetter.tex
+++ b/RPerezTorro_CoverLetter.tex
@@ -37,23 +37,23 @@
 \addrfrom{
 %\vspace{-15pt}
 \today\\ % Date
-238 Oceana Boulevard \\ % Address
-Southampton UK, SO14 3JG
+23 Bacwiessen Stra\ss{e} \\ % Address
+70199 Stuttgart, Germany
 }
 
-\phonefrom{+44 (0) 744 954 9630} % Phone number
+\phonefrom{+49  1511 7518095} % Phone number
 \emailfrom{rpereztorro@gmail.com} % Email address
 
 %----------------------------------------------------------------------------------------
 %	ADDRESSEE AND GREETING/CLOSING
 %----------------------------------------------------------------------------------------
 
-\greetto{Dear Sir or Madam,} % Greeting text
+\greetto{Dear Mr Lestriez,} % Greeting text
 
 
-\newcommand{\job}{Turbine Aerothermal Engineer}
-\newcommand{\jobref}{JR6016038}
-\newcommand{\jobweb}{Rolls-Royce careers' website}
+\newcommand{\job}{Application Engineer}
+\newcommand{\jobref}{NUMIB-17-NU}
+\newcommand{\jobweb}{Numeca International's careers site}
 
 \newcommand{\opng}[1]{
 		\IfEqCase{#1}{
@@ -67,16 +67,17 @@ Southampton UK, SO14 3JG
 		that I am the right fit for the position in question for the following
 		reasons:}
 		{2}{Given the prestige of the company I imagine you would have received
-		piles of applications. However, I believe my experience, knowledge and
-		ambition can stand out amongst the rest.}
+		many applications. However, I believe my experience, background and
+		ambition can convince you I am the right fit for this role.}
 		}
 		}
 
 %\nameto{} % Addressee of the letter above the to address
 
 \addrto{
-Rolls-Royce HR department,\\
-Derby (UK)\\
+Iber\'ica de Soluciones Num\'ericas S.L.,\\
+C/ Gonzalo de Berceo 16\\
+19171, Cabanillas del Campo (SPAIN)\\
 \\
 Job reference: \textbf{\job}  
 }
@@ -90,32 +91,21 @@ Job reference: \textbf{\job}
 %	LETTER CONTENT
 %----------------------------------------------------------------------------------------
 
-
 \opng{2} ``\job'' position that has recently been posted on
-\jobweb.\clng{1}
+\jobweb.\clng{2}
 
-Ever since I left my home country I have been pursuing a career in aerodynamics,
-especially in Computational Fluid Dynamics. My first step was to take a masters programme
-that gave me the specialisation and knowledge needed to take a CFD position in industry.
-During that course I gained experience in aerodynamics, turbulence, wind tunnel testing,
-numerical methods and many other.
+First of all, my academic history fits well with the one requested for this position. I have a total of nearly 10 years of solid academic background in fluid dynamics. Above all, I believe that my years as a post-graduate researcher in the University of Southampton have allowed me to become an expert in the field of Computational Fluid Dynamics. Not only I have proved to produce meaningful results that have been published in an international Journal but also to convey these to broad audiences in international conferences (see publications and awards sections on my attached CV).  
 
-Later on I took a position at Southampton University where I have spent the last 3 years
-as a researcher in the field of Computational Fluid Dynamics through which I have
-acquired an extensive knowledge and expertise in the matter. I have also become very
-confident at writing technical reports and giving presentations in front of wide audiences
-as you can seen in the Publications and Conferences section of my CV.
+Additionally, I have plenty of experience in using industrial CFD packages in my early career projects as well providing tutorial and introductory sessions to engineering students at the University of Southampton. This could be a key asset to be considered for this position since giving customer support and conducting training courses are part of the main duties of this role.
 
-On top of that, researching not only has strengthened my background but also my creativity
-and scientific capabilities. I am now a person that is capable of dealing with complex
-problems that need imaginative and innovative solutions.
+I also consider myself a proficient programmer, specially in Python and Fortran, and a computer science enthusiast in general. I am always happy to learn new things and broaden my field of expertise so although my background comes from the aeronautical and automotive industry, working for the renewable energy and marine industries would not be a problem for me.
 
 Thank you for your time and consideration and please feel free to contact me at any time
 if you need any more details. I look forward to your reply.
 
 Yours Faithfully, \newline % Closing text
 \includegraphics[scale=0.7]{sgtrBlue} \newline 
-Rafael P\'erez
+Rafael P\'erez-Torr\'o
 
 %----------------------------------------------------------------------------------------
 
