Update with Data Analyst role

--- a/RPerezTorro_CoverLetter.tex
+++ b/RPerezTorro_CoverLetter.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt,stdletter,dateno,sigleft]{newlfm} % Extra options: 'sigleft' for a left-aligned signature, 'stdletternofrom' to remove the from address, 'letterpaper' for US letter paper - consult the newlfm class manual for more options
+\documentclass[12pt,stdletter,dateno,sigleft]{newlfm} % Extra options: 'sigleft' for a left-aligned signature, 'stdletternofrom' to remove the from address, 'letterpaper' for US letter paper - consult the newlfm class manual for more options
 
 \renewcommand{\rmdefault}{phv} % Arial
 \renewcommand{\sfdefault}{phv} % Arial
@@ -37,7 +37,7 @@
 \addrfrom{
 %\vspace{-15pt}
 \today\\ % Date
-23 Bacwiessen Stra\ss{e} \\ % Address
+23 Bacwiessenstra\ss{e} \\ % Address
 70199 Stuttgart, Germany
 }
 
@@ -48,12 +48,12 @@
 %	ADDRESSEE AND GREETING/CLOSING
 %----------------------------------------------------------------------------------------
 
-\greetto{Dear Mr Lestriez,} % Greeting text
+%\greetto{To Numeca Int. HR team,} % Greeting text
 
 
-\newcommand{\job}{Application Engineer}
-\newcommand{\jobref}{NUMIB-17-NU}
-\newcommand{\jobweb}{Numeca International's careers site}
+\newcommand{\job}{Aerospace \& Automotive Application Engineer}
+\newcommand{\jobref}{APP18-1-NU}
+\newcommand{\jobweb}{the your careers site}
 
 \newcommand{\opng}[1]{
 		\IfEqCase{#1}{
@@ -74,13 +74,7 @@
 
 %\nameto{} % Addressee of the letter above the to address
 
-\addrto{
-Iber\'ica de Soluciones Num\'ericas S.L.,\\
-C/ Gonzalo de Berceo 16\\
-19171, Cabanillas del Campo (SPAIN)\\
-\\
-Job reference: \textbf{\job}  
-}
+\addrto{Job reference: \textbf{\jobref}}
 
 %----------------------------------------------------------------------------------------
 
@@ -94,17 +88,17 @@ Job reference: \textbf{\job}
 \opng{2} ``\job'' position that has recently been posted on
 \jobweb.\clng{2}
 
-First of all, my academic history fits well with the one requested for this position. I have a total of nearly 10 years of solid academic background in fluid dynamics. Above all, I believe that my years as a post-graduate researcher in the University of Southampton have allowed me to become an expert in the field of Computational Fluid Dynamics. Not only I have proved to produce meaningful results that have been published in an international Journal but also to convey these to broad audiences in international conferences (see publications and awards sections on my attached CV).  
+First of all, my academic history fits well with the one requested for this position. I have nearly 10 years of solid academic background in fluid dynamics. In particular, my years as a post-graduate researcher in the University of Southampton have allowed me to become an expert in the field of Computational Fluid Dynamics. Not only I have proved to produce meaningful results that have been published in an international Journal but also to convey these to broad audiences in international conferences (see publications and awards sections on my attached CV).  
 
-Additionally, I have plenty of experience in using industrial CFD packages in my early career projects as well providing tutorial and introductory sessions to engineering students at the University of Southampton. This could be a key asset to be considered for this position since giving customer support and conducting training courses are part of the main duties of this role.
+Secondly, I have plenty of experience in using industrial CFD packages, specially in the automotive and aerospace industries. Besides this, I am also experienced in providing tutorial and introductory CFD sessions to less experienced CFD users since I did this while teaching in the university.
 
-I also consider myself a proficient programmer, specially in Python and Fortran, and a computer science enthusiast in general. I am always happy to learn new things and broaden my field of expertise so although my background comes from the aeronautical and automotive industry, working for the renewable energy and marine industries would not be a problem for me.
+And finally, I consider myself a proficient programmer. I am particularly good with Python and Fortran, but since I am a computer enthusiast, I have also done bits and pieces in many other languages. Therefore, I would be very comfortable writing the Python scripts mentioned in the job description.
 
 Thank you for your time and consideration and please feel free to contact me at any time
 if you need any more details. I look forward to your reply.
 
 Yours Faithfully, \newline % Closing text
-\includegraphics[scale=0.7]{sgtrBlue} \newline 
+\includegraphics[scale=0.8]{sgtrBlue} \newline 
 Rafael P\'erez-Torr\'o
 
 %----------------------------------------------------------------------------------------
