--- a/RPerezTorroCV.tex
+++ b/RPerezTorroCV.tex
@@ -45,9 +45,9 @@
 +34 611 411 155\sbull
 \href{https://www.linkedin.com/in/rperezt/}{www.linkedin.com/in/rperezt}
 \\
-23 Bachwiesen Stra\ss{e}\sbull
-70199\sbull
-Stuttgart\sbull
+21 Jagersruh\sbull
+38126\sbull
+Braunschweig\sbull
 Germany
 
 \spacedhrule{0.9em}{-0.4em}  % a horizontal line with some vertical spacing before and after
@@ -60,6 +60,21 @@ Germany
 \spacedhrule{0em}{-0.4em}
 
 \roottitle{EXPERIENCE}
+
+\headedsection  % sets the header for the section and includes any subsections
+  {\href{https://www.p3-group.com/}{P3-SYSTEMS}}
+  {\textsc{Wolfsburg, Germany}} {%
+  \headedsubsection{Data Analyst}{Sept. 2017 -- Present}
+  {\bodytext{As part of the Data-Analytics team of P3-Systems I have been involved in a project that aims to extract meaningful statistical data from the defect database of Volkswagen. \\
+  \textbf{Main Duties and highlights:} 
+    \begin{itemize}
+    	\item Design an automatic update of local database copies of the main Volkswagen's database-warehouse using bash
+	\item Predict future evolution of time-series using Neural-Networks and Gaussian-Processes
+	\item Design web-based data-dashboards presenting key statistics
+	\item Maintain a direct relation with the customer presenting sprint results on a weekly basis
+    \end{itemize}
+    }}
+}
 
 \headedsection  % sets the header for the section and includes any subsections
   {\href{https://www.p3-group.com/}{P3-SYSTEMS}}
@@ -182,7 +197,7 @@ Germany
 
 \inlineheadsection  % special section that has an inline header with a 'hanging' paragraph
   {Programming:}
-  {Fortran90, Python, C++, VisualBasic, Bash, Unix, Java, \LaTeX}
+  {Fortran90, Python, C++, VisualBasic, Bash, Unix, Java, HTML, JavaScript, MySQL \LaTeX}
 \vspace{0.5em}
 \inlineheadsection  % special section that has an inline header with a 'hanging' paragraph
   {Parallel Programing:}
@@ -206,7 +221,7 @@ Germany
 \vspace{0.5em}
 \inlineheadsection
   {Languages:}
-  {Spanish (Mother Tongue), Catalan (Mother Tongue), English (Proficient),\\ French (Basic), German (Very Basic)}
+  {Spanish (Mother Tongue), Catalan (Mother Tongue), English (Proficient),\\ French (Basic), German (Basic)}
 \vspace{0.5em}
 \inlineheadsection  % special section that has an inline header with a 'hanging' paragraph
   {Other:}
